# sigan

./: AGENTS.md  Cargo.toml  LICENSE  NOTES.md  README.md
src/: cli.rs  config.rs  datetime.rs  editor.rs  main.rs  models.rs  service.rs
src/output/: mod.rs
src/storage/: file.rs  mod.rs
