[package]
name = "sigan"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Steven Wilcox"]
description = "A Rust command-line time tracker compatible with sigye file storage."
license = "MIT"
repository = "https://github.com/swilcox/sigan"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["time-tracking", "cli", "sigye"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", default-features = false }
csv = "1.3"
dirs = "6.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tabled = { version = "0.20", features = ["ansi"] }
tempfile = "3.14"
toml = "0.9"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
